--- a/imgui.ini
+++ b/imgui.ini
@@ -1,13 +1,29 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=116,88
 Size=500,500
 Collapsed=0
 
 [Window][Configuration window]
-ViewportPos=1206,211
+ViewportPos=700,131
 ViewportId=0x7D1F2E89
-Size=500,634
+Size=500,643
 Collapsed=0
 
-[Docking][Data]
+[Window][Dear ImGui Demo]
+ViewportPos=973,265
+ViewportId=0xE927CF2F
+Size=550,680
+Collapsed=0
+
+[Window][Example: Simple layout]
+ViewportPos=795,479
+ViewportId=0x32FFF4A6
+Size=500,500
+Collapsed=0
+
+[Window][Object list]
+ViewportPos=1192,306
+ViewportId=0x24C33CC2
+Size=500,500
+Collapsed=0
 
