--- a/CAD Bane.vcxproj.filters
+++ b/CAD Bane.vcxproj.filters
@@ -120,13 +120,28 @@
     <ClCompile Include="src\objects\torus.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\objects\checkergrid.ixx">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\ui\components\objectlistcomp.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ui\components\torusconfigcomp.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objects\cursor.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objects\selectableobject.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objects\point.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\rendering\pointrenderer.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objects\grid.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objects\middlepoint.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1452,12 +1467,18 @@
     </None>
     <None Include="shaders\flattexture.vert" />
     <None Include="shaders\flattexture.frag" />
-    <None Include="shaders\grid.vert" />
-    <None Include="shaders\grid.frag" />
     <None Include="shaders\raycasting.vert" />
     <None Include="shaders\raycasting.frag" />
-    <None Include="shaders\solidcolor.vert" />
-    <None Include="shaders\solidcolor.frag" />
+    <None Include="shaders\checkergrid.frag" />
+    <None Include="shaders\checkergrid.vert" />
+    <None Include="shaders\infinitegrid.frag" />
+    <None Include="shaders\infinitegrid.vert" />
+    <None Include="shaders\multicolor.frag" />
+    <None Include="shaders\multicolor.vert" />
+    <None Include="shaders\uniformcolor.frag" />
+    <None Include="shaders\uniformcolor.vert" />
+    <None Include="shaders\point.vert" />
+    <None Include="shaders\point.frag" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="external\lib\glfw3.lib" />
