--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=500,500
 Collapsed=0
 
 [Window][Configuration window]
-ViewportPos=1127,201
+ViewportPos=1126,199
 ViewportId=0x7D1F2E89
 Size=500,625
 Collapsed=0
@@ -22,8 +22,14 @@ Size=500,500
 Collapsed=0
 
 [Window][Object list]
-ViewportPos=1534,330
+ViewportPos=1437,307
 ViewportId=0x24C33CC2
+Size=500,500
+Collapsed=0
+
+[Window][Add C0 Surface]
+ViewportPos=1534,329
+ViewportId=0x22D56183
 Size=500,500
 Collapsed=0
 
