--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=500,500
 Collapsed=0
 
 [Window][Configuration window]
-ViewportPos=1126,199
+ViewportPos=1022,248
 ViewportId=0x7D1F2E89
 Size=500,625
 Collapsed=0
@@ -22,7 +22,7 @@ Size=500,500
 Collapsed=0
 
 [Window][Object list]
-ViewportPos=1437,307
+ViewportPos=1358,398
 ViewportId=0x24C33CC2
 Size=500,500
 Collapsed=0
@@ -32,4 +32,383 @@ ViewportPos=1534,329
 ViewportId=0x22D56183
 Size=500,500
 Collapsed=0
+
+[Window][Choose file##ChooseFileDlgKey]
+ViewportPos=871,342
+ViewportId=0x8DF731DF
+Size=501,500
+Collapsed=0
+
+[Window][Save as##ChooseFileDlgKey]
+Pos=30,125
+Size=500,500
+Collapsed=0
+
+[Table][0x49EB5ECB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x305C03DE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7E62C496,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xECEB9954,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x580CD70F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x469BD4E4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5D4499F7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x07B454D2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x66ECCC21,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7FC33D6E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x254898F2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3C6769BD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x750FB507,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6C204448,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x664E534D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7F61A202,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7775477B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDFC57365,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC6EA822A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8B71E88D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x925E19C2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD76F3414,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1333128B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0A1CE3C4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA1EC5246,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB8C3A309,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD1B92D67,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC896DC28,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE97E03DE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x64CA3316,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7DE5C259,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x826E52E1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9B41A3AE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA66D4321,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC918DF51,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9F431B15,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x15DACE31,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x70F65DCC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5481843A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4A5AEFF8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF7627B83,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCE0B2654,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCF181597,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCB0AC66C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE9547BFD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x39056D75,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x19FB9F75,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x00D46E3A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE2DD7DC9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF49A3E1B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6A105F60,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6E803DCA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x516C82BB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE4296F11,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3B9CD576,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x81F7F859,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1B3023EC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x021FD2A3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2057EECA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x39781F85,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x98B74D75,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8198BC3A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF569C734,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEC46367B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x55A525F1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4C8AD4BE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF0CDA5AC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE9E254E3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7134BC1C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x681B4D53,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3A08D154,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2327201B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x48BC2AF6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5193DBB9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x00A526FA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCAB8489D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD397B9D2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9B6C34DB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8243C594,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x085DEBE3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2F0FC9AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x362038E2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF1235807,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x64AD42DD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7D82B392,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB394BDBE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xACBFBD9A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA58E423E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x872D23C2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x18AFCB2E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x01803A61,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC5B6F25F,4]
+RefScale=13
+Column 0  Sort=0v
 
